--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Hydro SDK Web</title>
+    <title>Vestrade Decentralized Exchange</title>
     <link href="%PUBLIC_URL%/static/css/font-awesome@4.7.0.css" rel="stylesheet" />
     <link rel="stylesheet" href="%PUBLIC_URL%/static/css/bootstrap@4.3.1.css" />
     <script src="%PUBLIC_URL%/static/js/jquery@3.3.1.js"></script>
